[package]
name = "vercre-core"
description = "OpenID Data Model"
license = "MIT OR Apache-2.0"
readme = "README.md"
authors.workspace = true
categories.workspace = true
edition.workspace = true
exclude.workspace = true
homepage.workspace = true
keywords.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
# crate-type = ["cdylib", "rlib"]

[features]
wasm = ["fastrand/js"]

[lints]
workspace = true

[dependencies]
base64ct.workspace = true
fastrand = "2.1.1"
percent-encoding = "2.3.1"
serde.workspace = true
serde_json.workspace = true
sha2 = "0.10.8"

[dev-dependencies]
