[package]
name = "crypto"
description = "OpenID Data Model"
license = "MIT OR Apache-2.0"
publish = false
readme = "README.md"
authors.workspace = true
categories.workspace = true
edition.workspace = true
exclude.workspace = true
homepage.workspace = true
keywords.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
# crate-type = ["cdylib", "rlib"]

# [features]
# default = []
# secp256k1 = []

[lints]
workspace = true

[dependencies]
anyhow.workspace = true

[dev-dependencies]
biscuit = "0.7.0"
dryoc = { version = "0.5.3", features = ["nightly", "simd_backend"] }
ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }
num-bigint = "0.4.6"
rand = "0.8.5"
serde.workspace = true
serde_json.workspace = true
signature = "2.2.0"
x25519-dalek = { version = "2.0.1", features = ["static_secrets"] }

# ecdsa.workspace = true
# tracing.workspace = true
# bs58 = { version = "0.4", features = ["check"] }
# curve25519-dalek = "4.1.3"
