[package]
name = "datasec"
description = "Proof utilities"
license = "MIT OR Apache-2.0"
publish = false
readme = "README.md"
authors.workspace = true
categories.workspace = true
edition.workspace = true
exclude.workspace = true
homepage.workspace = true
keywords.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
# crate-type = ["cdylib", "rlib"]

# [features]
# default = []
# secp256k1 = []

[lints]
workspace = true

[dependencies]
k256 = "0.13.3"
aes-gcm = "0.10.3"
anyhow.workspace = true
base64ct.workspace = true
crypto_box = { version = "0.9.1", features = ["chacha20", "heapless"] }
ecdsa.workspace = true
ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
x25519-dalek = { version = "2.0.1", features = ["static_secrets"] }

[dev-dependencies]
signature = "2.2.0"
tokio.workspace = true
