[package]
name = "vercre-datasec"
description = "Proof utilities"
license = "MIT OR Apache-2.0"
readme = "README.md"
authors.workspace = true
categories.workspace = true
edition.workspace = true
exclude.workspace = true
homepage.workspace = true
keywords.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
# crate-type = ["cdylib", "rlib"]

[lints]
workspace = true

[dependencies]
aes-gcm = "0.10.3"
anyhow.workspace = true
base64ct.workspace = true
chrono.workspace = true
crypto_box = { version = "0.9.1", features = ["chacha20", "heapless"] }
curve25519-dalek = "4.1.3"
ecdsa.workspace = true
ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }
futures.workspace = true
k256 = "0.13.3"
multibase = "0.9"
rand = "0.8.5"
regex = "1.10.6"
serde.workspace = true
serde_json.workspace = true
thiserror = "1.0"
tracing.workspace = true
url = "2.5.2"
vercre-core.workspace = true
x25519-dalek = { version = "2.0.1", features = ["static_secrets"] }

[dev-dependencies]
insta = { version = "1.39.0", features = ["filters", "json", "redactions", "yaml"] }
signature = "2.2.0"
tokio.workspace = true
