[package]
name = "vercre-datasec"
description = "Proof utilities"
license = "MIT OR Apache-2.0"
readme = "README.md"
authors.workspace = true
categories.workspace = true
edition.workspace = true
exclude.workspace = true
homepage.workspace = true
keywords.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
# crate-type = ["cdylib", "rlib"]

[lints]
workspace = true

[dependencies]
aes-gcm = "0.10.3"
anyhow.workspace = true
base64ct.workspace = true
ciborium = "0.2.2"
coset = "0.3.8"
crypto_box = { version = "0.9.1", features = ["chacha20", "heapless"] }
ecdsa.workspace = true
ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }
futures.workspace = true
k256 = "0.13.4"
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
x25519-dalek = { version = "2.0.1", features = ["static_secrets"] }

[dev-dependencies]
hex = "0.4.3"
signature = "2.2.0"
tokio.workspace = true
