[package]
name = "did"
description = "OpenID Data Model"
license = "MIT OR Apache-2.0"
publish = false
readme = "README.md"
authors.workspace = true
categories.workspace = true
edition.workspace = true
exclude.workspace = true
homepage.workspace = true
keywords.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
# crate-type = ["cdylib", "rlib"]

# [features]
# default = []
# secp256k1 = []

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
base64ct.workspace = true
chrono.workspace = true
core-utils.workspace = true
curve25519-dalek = "4.1.3"
ecdsa = { version = "0.16.9" }
ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }
k256 = { version = "0.13.3" }
multibase = "0.9"
proof.workspace = true
rand = "0.8.5"
regex = "1.10.5"
serde.workspace = true
serde_json.workspace = true
thiserror = "1.0"
url = "2.5.2"

# ecdsa.workspace = true
# percent-encoding = { version = "2.1", optional = true }
# reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"], optional = true }
# serde_urlencoded = "0.7"
# bs58 = { version = "0.4", features = ["check"] }
# tracing.workspace = true

[dev-dependencies]
insta = { version = "1.39.0", features = ["filters", "json", "redactions", "yaml"] }
reqwest = "0.12.5"
tokio.workspace = true
