[package]
name = "vercre-did"
description = "OpenID Data Model"
license = "MIT OR Apache-2.0"
readme = "README.md"
authors.workspace = true
categories.workspace = true
edition.workspace = true
exclude.workspace = true
homepage.workspace = true
keywords.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
# crate-type = ["cdylib", "rlib"]

# [features]
# default = []
# secp256k1 = []

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
base64ct.workspace = true
chrono.workspace = true
curve25519-dalek = "4.1.3"
ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }
multibase = "0.9"
rand = "0.8.5"
regex = "1.11.0"
serde.workspace = true
serde_json.workspace = true
thiserror = "1.0"
url = "2.5.2"
vercre-core.workspace = true
vercre-datasec.workspace = true

# ecdsa.workspace = true
# percent-encoding = { version = "2.1", optional = true }
# reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"], optional = true }
# serde_urlencoded = "0.7"
# bs58 = { version = "0.4", features = ["check"] }
# tracing.workspace = true

[dev-dependencies]
insta = { version = "1.40.0", features = ["filters", "json", "redactions", "yaml"] }
tokio.workspace = true
