[package]
name = "vercre-iso-mdl"
description = "Primary Verifiable Credential building blocks, including dependencies."
license = "MIT OR Apache-2.0"
readme = "README.md"
authors.workspace = true
categories.workspace = true
edition.workspace = true
exclude.workspace = true
homepage.workspace = true
keywords.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
# crate-type = ["cdylib", "rlib"]

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
base64ct.workspace = true
chrono.workspace = true
ciborium = "0.2.2"
coset = "0.3.8"
rand = { version = "0.8.5", features = ["getrandom"] }
serde.workspace = true
serde_json.workspace = true
sha2 = "0.10.8"
vercre-infosec.workspace = true

[dev-dependencies]
test-utils.workspace = true
tokio.workspace = true
