[package]
name = "vercre-macros"
description = "OpenID macros"
license = "MIT OR Apache-2.0"
readme = "README.md"
authors.workspace = true
categories.workspace = true
edition.workspace = true
exclude.workspace = true
homepage.workspace = true
keywords.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
proc-macro = true

[lints]
workspace = true

[dependencies]
proc-macro2 = { version = "1.0.86", features = ["proc-macro"] }
quote = "1.0.37"
syn = { version = "2.0.77", features = ["full"] }
vercre-openid.workspace = true

[dev-dependencies]
insta.workspace = true
