[package]
name = "vercre-openid"
description = "OpenID Data Model"
license = "MIT OR Apache-2.0"
readme = "README.md"
authors.workspace = true
categories.workspace = true
edition.workspace = true
exclude.workspace = true
homepage.workspace = true
keywords.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
# crate-type = ["cdylib", "rlib"]

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
base64ct.workspace = true
chrono.workspace = true
image = { version = "0.25.2", default-features = false, features = ["png"] }
qrcode = { version = "0.14.1", default-features = false, features = ["image"] }
serde.workspace = true
serde_json.workspace = true
serde_qs.workspace = true
thiserror = "1.0.64"
vercre-core.workspace = true
vercre-datasec.workspace = true
vercre-did.workspace = true
vercre-dif-exch.workspace = true
vercre-status.workspace = true
vercre-w3c-vc.workspace = true

[dev-dependencies]
insta = { version = "1.40.0", features = ["filters", "redactions", "yaml"] }
