[package]
name = "vercre-openid"
description = "OpenID Data Model"
license = "MIT OR Apache-2.0"
readme = "README.md"
authors.workspace = true
categories.workspace = true
edition.workspace = true
exclude.workspace = true
homepage.workspace = true
keywords.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
# crate-type = ["cdylib", "rlib"]

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
base64ct.workspace = true
chrono.workspace = true
image = { version = "0.25.4", default-features = false, features = ["png"] }
qrcode = { version = "0.14.1", default-features = false, features = ["image"] }
serde.workspace = true
serde_json.workspace = true
thiserror = "2.0.11"
urlencoding = "2.1.3"
vercre-core.workspace = true
vercre-did.workspace = true
vercre-dif-exch.workspace = true
vercre-infosec.workspace = true
vercre-status.workspace = true
vercre-w3c-vc.workspace = true

[dev-dependencies]
insta = { version = "1.40.0", features = ["filters", "redactions", "yaml"] }
