[package]
name = "proof"
description = "OpenID Data Model"
license = "MIT OR Apache-2.0"
publish = false
readme = "README.md"
authors.workspace = true
categories.workspace = true
edition.workspace = true
exclude.workspace = true
homepage.workspace = true
keywords.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
# crate-type = ["cdylib", "rlib"]

# [features]
# default = []
# secp256k1 = []

[lints]
workspace = true

[dependencies]
aes-gcm = "0.10.3"
anyhow.workspace = true
base64ct.workspace = true
core-utils.workspace = true
crypto_box = { version = "0.9.1", features = ["chacha20"] }
ecdsa.workspace = true
ed25519-dalek = "2.1.1"
k256.workspace = true
rand = "0.8.5"
ring = "0.17.5"
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
x25519-dalek = { version = "2.0.1", features = ["static_secrets"] }

[dev-dependencies]
biscuit = "0.7.0"
dryoc = { version = "0.5.3", features = ["nightly", "simd_backend"] }
num-bigint = "0.4.6"
signature = "2.2.0"
