[package]
name = "test-holder"
edition.workspace = true
publish = false
rust-version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow.workspace = true
base64ct.workspace = true
chrono.workspace = true
credibil-did.workspace = true
credibil-infosec.workspace = true
credibil-vc.workspace = true
ed25519-dalek = "2.1.1"
multibase = "0.9"
rand = "0.8.5"
serde.workspace = true
serde_json.workspace = true
sha2 = "0.10.8"
uuid.workspace = true
x25519-dalek = { version = "2.0.1", features = ["static_secrets"] }
