[package]
name = "test-utils"
description = "Test utilities"
publish = false
authors.workspace = true
categories.workspace = true
edition.workspace = true
exclude.workspace = true
homepage.workspace = true
keywords.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow.workspace = true
base64ct.workspace = true
chrono.workspace = true
datasec.workspace = true
did = { path = "../did" }
ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }
openid.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "fmt"] }
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
tokio.workspace = true
