[package]
name = "vercre-test-utils"
description = "Test utilities"
license = "MIT OR Apache-2.0"
authors.workspace = true
categories.workspace = true
edition.workspace = true
exclude.workspace = true
homepage.workspace = true
keywords.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow.workspace = true
base64ct.workspace = true
chrono.workspace = true
ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }
serde.workspace = true
serde_json.workspace = true
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "fmt"] }
tracing.workspace = true
uuid.workspace = true
vercre-datasec.workspace = true
vercre-did.workspace = true
vercre-openid.workspace = true
vercre-status.workspace = true

[dev-dependencies]
