[package]
name = "test-utils"
edition.workspace = true
publish = false
rust-version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow.workspace = true
base64ct.workspace = true
chrono.workspace = true
ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }
serde.workspace = true
serde_json.workspace = true
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "fmt"] }
tracing.workspace = true
uuid.workspace = true
vercre-did.workspace = true
vercre-infosec.workspace = true
vercre-openid.workspace = true
vercre-status.workspace = true

[dev-dependencies]
