[package]
name = "vercre-core"
description = "OpenID Data Model"
license = "MIT OR Apache-2.0"
publish = false
readme = "README.md"
authors.workspace = true
categories.workspace = true
edition.workspace = true
exclude.workspace = true
homepage.workspace = true
keywords.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
bench = false
crate-type = ["cdylib", "rlib"]

[features]
typegen = []
wasm = ["fastrand/js"]

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
base64ct.workspace = true
chrono.workspace = true
ecdsa.workspace = true
fastrand = "2.1.0"
image = { version = "0.25.1", default-features = false, features = ["png"] }
qrcode = { version = "0.14.0", default-features = false, features = ["image"] }
serde.workspace = true
serde_json.workspace = true
serde_json_path = "0.6.7"
serde_qs = "0.13.0"
thiserror = "1.0.61"
tracing.workspace = true
vercre-vc.workspace = true

[dev-dependencies]
insta = { version = "1.39.0", features = ["filters", "redactions", "yaml"] }
