[package]
name = "vercre-exch"
description = "An implementation of DIF Presentation Exchange specification."
license = "MIT OR Apache-2.0"
publish = false
readme = "README.md"
authors.workspace = true
categories.workspace = true
edition.workspace = true
exclude.workspace = true
homepage.workspace = true
keywords.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
# crate-type = ["cdylib", "rlib"]

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
regex = "1.10.5"
serde.workspace = true
serde_json.workspace = true
serde_json_path = "0.6.7"

[dev-dependencies]
tracing-subscriber.workspace = true
