[package]
name = "vercre-vc"
description = "Primary Verifiable Credential building blocks, including dependencies."
license = "MIT OR Apache-2.0"
publish = false
readme = "README.md"
authors.workspace = true
categories.workspace = true
edition.workspace = true
exclude.workspace = true
homepage.workspace = true
keywords.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

# [lib]
# crate-type = ["cdylib", "rlib"]

[lints]
workspace = true

[dependencies]
anyhow = "1.0.86"
base64ct = { version = "1.6.0", features = ["std"] }
chrono = { version = "0.4.38", features = ["serde"] }
ecdsa = { version = "0.16.9", features = ["verifying"] }
ed25519-dalek = "2.1.1"
k256 = "0.13.3"
regex = "1.10.5"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = { version = "1.0.117", features = ["alloc"] }
serde_json_path = "0.6.7"
tracing = "0.1.40"
uuid = { version = "1.8.0", features = ["fast-rng", "v4"] }

[dev-dependencies]
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "fmt"] }

