[package]
name = "vercre-vc"
description = "Primary Verifiable Credential building blocks, including dependencies."
license = "MIT OR Apache-2.0"
publish = false
readme = "README.md"
authors.workspace = true
categories.workspace = true
edition.workspace = true
exclude.workspace = true
homepage.workspace = true
keywords.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
# crate-type = ["cdylib", "rlib"]

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
base64ct.workspace = true
chrono.workspace = true
ecdsa = { workspace = true, features = ["verifying"] }
ed25519-dalek = "2.1.1"
k256.workspace = true
regex = "1.10.5"
serde.workspace = true
serde_json.workspace = true
serde_json_path = "0.6.7"
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
tracing-subscriber.workspace = true
